# your_awesome_project

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  content.md  lib_ut_tests  myApp
.github/workflows/: can_pipeline.yaml  file_io_pipeline.yaml  whole_project.yaml
CAN_messages/: CMakeLists.txt  arg_gården.py  can_msg_gen.py  min_signals.json
CAN_messages/output/src/: CAN_min_signals.cpp
Main_Component/: CMakeLists.txt
Main_Component/input/: test_cmds.txt
Main_Component/src/: main.cpp
file_io/: CMakeLists.txt
file_io/app/src/: main.cpp
file_io/lib/include/: File_Io.h
file_io/lib/src/: File_Io.cpp
file_io/lib/ut/: tests.cpp  ut_lib_tests.cpp
ideas/: ideas.md
